--- a/about-us.html
+++ b/about-us.html
@@ -216,7 +216,7 @@
           <h3 class="breadcrumbs-custom-title">About us</h3>
           <div class="breadcrumbs-custom-decor"></div>
         </div>
-        <div class="box-transform" style="background-image: url(images/bg-1.jpg);"></div>
+        <div class="box-transform" style="background-image: url(images/BannerImgs/about-banner.jpg);"></div>
       </div>
       <div class="container">
         <ul class="breadcrumbs-custom-path">
@@ -254,20 +254,20 @@
                 <p>At Deepak Collection, we believe that every man deserves to look his best, whether at work, at a
                   social event, or in casual settings. Our commitment to quality and customer satisfaction is reflected
                   in every piece we offer. Join us on our journey to redefine men's fashion, one outfit at a time.</p>
-                <img src="images/about-1-835x418.jpg" alt="Deepak Collection" width="835" height="418" />
+                <img src="images/aboutsection.jpg" alt="Deepak Collection" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-2">
                 <h4>Our Mission</h4>
                 <p>Our mission is to empower men with stylish and comfortable clothing that boosts confidence and
                   reflects their unique personality. We strive to provide a shopping experience that is as exceptional
                   as our products, making Deepak Collection the go-to destination for men's fashion.</p><img
-                  src="images/about-1-835x418.jpg" alt="Our Mission" width="835" height="418" />
+                  src="images/aboutsection.jpg" alt="Our Mission" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-3">
                 <h4>Our Goals</h4>
                 <p>Our goal is to continuously innovate and expand our product line, offering our customers the latest
                   in men's fashion. We aim to become a leading name in the fashion industry, known for our dedication to
-                  quality, style, and customer satisfaction.</p><img src="images/about-1-835x418.jpg" alt="Our Goals"
+                  quality, style, and customer satisfaction.</p><img src="images/aboutsection.jpg" alt="Our Goals"
                   width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-4">
@@ -275,7 +275,7 @@
                 <p>Integrity, quality, and customer satisfaction are the core values that drive everything we do at
                   Deepak Collection. We are committed to providing our customers with clothing that is not only stylish
                   but also durable and comfortable, ensuring they feel confident in every outfit they wear.</p><img
-                  src="images/about-1-835x418.jpg" alt="Our Values" width="835" height="418" />
+                  src="images/aboutsection.jpg" alt="Our Values" width="835" height="418" />
               </div>
             </div>
           </div>
@@ -362,7 +362,7 @@
                   outing or a formal event.</p>
                 <p>We are dedicated to providing high-quality clothing that combines comfort, durability, and style. Our
                   collections are updated regularly to reflect the latest trends while maintaining classic elegance.</p>
-                <img src="images/about-1-835x418.jpg" alt="Deepak Collection" width="835" height="418" />
+                <img src="images/aboutsection2.jpg" alt="Deepak Collection" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-2">
                 <h4>Our Mission</h4>
