--- a/about-us.html
+++ b/about-us.html
@@ -305,7 +305,7 @@
             <article class="box-icon-classic">
               <div class="unit unit-spacing-lg flex-column text-center flex-md-row text-md-left">
                 <div class="unit-left">
-                  <div class="box-icon-classic-icon linearicons-t-shirt"></div>
+                  <div class="box-icon-classic-icon linearicons-shirt"></div>
                 </div>
                 <div class="unit-body">
                   <h5 class="box-icon-classic-title"><a href="#">Variety of Styles</a></h5>
@@ -517,14 +517,14 @@
             </div>
           </div>
           <div class="col-md-9 col-lg-6 position-static index-1">
-            <div class="bg-image-right-1 bg-image-right-lg"><img src="images/our_history-1110x710.jpg" alt="Our History"
+            <div class="bg-image-right-1 bg-image-right-lg"><img src="images/abouthistory.jpg" alt="Our History"
                 width="1110" height="710" />
               <div class="link-play-modern"><a class="icon mdi mdi-play" data-lightgallery="item"
                   href="https://www.youtube.com/watch?v=1UWpbtUupQQ"></a>
                 <div class="link-play-modern-title">How we<span>Work</span></div>
                 <div class="link-play-modern-decor"></div>
               </div>
-              <div class="box-transform" style="background-image: url(images/our_history-1110x710.jpg);"></div>
+              <div class="box-transform" style="background-image: url(images/abouthistory.jpg);"></div>
             </div>
           </div>
         </div>
@@ -603,7 +603,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-xl-7"><img src="images/wp-say-669x447.jpg" alt="" width="669" height="447" />
+          <div class="col-lg-6 col-xl-7"><img src="images/whatpeoplesay.jpg" alt="" width="669" height="447" />
           </div>
         </div>
       </div>
