--- a/contacts.html
+++ b/contacts.html
@@ -215,7 +215,7 @@
           <h3 class="breadcrumbs-custom-title">Contacts</h3>
           <div class="breadcrumbs-custom-decor"></div>
         </div>
-        <div class="box-transform" style="background-image: url(images/bg-1.jpg);"></div>
+        <div class="box-transform" style="background-image: url(images/clothing.jpg);"></div>
       </div>
       <div class="container">
         <ul class="breadcrumbs-custom-path">
