--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Our Product</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="products.html">Our Product</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                     </li>
