--- a/products.html
+++ b/products.html
@@ -215,7 +215,7 @@
           <h3 class="breadcrumbs-custom-title">Product</h3>
           <div class="breadcrumbs-custom-decor"></div>
         </div>
-        <div class="box-transform" style="background-image: url(images/bg-1.jpg);"></div>
+        <div class="box-transform" style="background-image: url(images/product.jpg);"></div>
       </div>
       <div class="container">
         <ul class="breadcrumbs-custom-path">
@@ -225,144 +225,172 @@
       </div>
     </section>
     <!-- Base Product-->
-    <section class="section section-sm section-first bg-default section-style-2 text-md-left">
+    <section class="section section-lg bg-default">
       <div class="container">
-        <div class="row row-50">
-          <div class="col-lg-8">
-            <ul class="list-xl box-Product">
-              <li>
-                <h1>H1 Heading</h1>
-                <p>Welcome to our wonderful world. We sincerely hope that each and every user entering our website will
-                  find exactly what he/she is looking for. With advanced features of activating account and new login
-                  widgets, you will definitely have a great experience of using our web page.</p>
-              </li>
-              <li>
-                <h2>H2 Heading</h2>
-                <p>Welcome to our wonderful world. We sincerely hope that each and every user entering our website will
-                  find exactly what he/she is looking for. With advanced features of activating account and new login
-                  widgets, you will definitely have a great experience of using our web page.</p>
-              </li>
-              <li>
-                <h3>H3 Heading</h3>
-                <p>Welcome to our wonderful world. We sincerely hope that each and every user entering our website will
-                  find exactly what he/she is looking for. With advanced features of activating account and new login
-                  widgets, you will definitely have a great experience of using our web page.</p>
-              </li>
-              <li>
-                <h4>H4 Heading</h4>
-                <p>Welcome to our wonderful world. We sincerely hope that each and every user entering our website will
-                  find exactly what he/she is looking for. With advanced features of activating account and new login
-                  widgets, you will definitely have a great experience of using our web page.</p>
-              </li>
-              <li>
-                <h5>H5 Heading</h5>
-                <p>Welcome to our wonderful world. We sincerely hope that each and every user entering our website will
-                  find exactly what he/she is looking for. With advanced features of activating account and new login
-                  widgets, you will definitely have a great experience of using our web page.</p>
-              </li>
-              <li>
-                <h6>H6 Heading</h6>
-                <p>Welcome to our wonderful world. We sincerely hope that each and every user entering our website will
-                  find exactly what he/she is looking for. With advanced features of activating account and new login
-                  widgets, you will definitely have a great experience of using our web page.</p>
-              </li>
-            </ul>
+        <h3 class="oh-desktop"><span class="d-inline-block wow slideInUp">Our Collection</span></h3>
+        <div class="row row-lg row-30">
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft" data-wow-delay=".15s">
+              <div class="product-figure"><img src="images/product-1-161x162.png" alt="" width="161" height="162" />
+              </div>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star text-gray-13"></span></div>
+              <h6 class="product-title">Casual Shirt</h6>
+              <div class="product-price-wrap">
+                <div class="product-price">$50.00</div>
+              </div>
+              <div class="product-button">
+                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
+                    Product</a></div>
+              </div>
+            </article>
           </div>
-          <div class="col-lg-4">
-            <div class="box-Product-description">
-              <div class="box-Product-description-item">
-                <p class="heading-7">Google Fonts</p>
-                <h3 class="text-transform-none text-spacing-50">Roboto</h3>
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft" data-wow-delay=".1s">
+              <div class="product-figure"><img src="images/product-2-161x162.png" alt="" width="161" height="162" />
               </div>
-              <div class="box-Product-description-item">
-                <p class="heading-7">Used colors</p>
-                <div class="box-color">
-                  <div class="box-color-line">
-                    <div class="box-color-item bg-primary"></div>
-                    <div class="box-color-item bg-secondary"></div>
-                    <div class="box-color-item bg-gray-800"></div>
-                    <div class="box-color-item bg-gray-600"></div>
-                  </div>
-                  <div class="box-color-line">
-                    <div class="box-color-item bg-gray-300"></div>
-                    <div class="box-color-item bg-gray-200"></div>
-                  </div>
-                  <div class="box-color-line">
-                    <div class="box-color-item bg-gray-100"></div>
-                  </div>
-                </div>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
+              <h6 class="product-title">Formal Suit</h6>
+              <div class="product-price-wrap">
+                <div class="product-price">$120.00</div>
               </div>
-            </div>
+              <div class="product-button">
+                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
+                    Product</a></div>
+              </div><span class="product-badge product-badge-new">New</span>
+            </article>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- HTML Text Elements-->
-    <section class="section section-sm bg-default section-style-2 text-md-left">
-      <div class="container">
-        <h4>HTML Text Elements</h4>
-        <p class="text-block">Welcome to our wonderful world. This is a bold text
-          <mark>This is a highlighted text</mark>We sincerely hope that each and every user entering our website will
-          find exactly what he/she is looking for. With advanced features of activating account and new login<span
-            class="tooltip-custom" data-toggle="tooltip" data-placement="top"
-            title="Default text">Tooltips</span>widgets, you will definitely have a great experience of using our web
-          page.<span class="text-strike">This is a strikethrough text</span><span class="text-underline">This is an
-            underlined text.</span><a href="#">Link</a><a class="link-hover" href="#">Hover link</a><a
-            class="link-active" href="#">Press link</a>
-        </p>
-      </div>
-    </section>
-
-    <!-- Lists and Blockquote-->
-    <section class="section section-sm bg-default section-style-2 text-md-left">
-      <div class="container">
-        <h4>Ordered & Unordered Lists</h4>
-        <div class="row">
-          <div class="col-lg-10 col-xl-7">
-            <div class="row row-30">
-              <div class="col-md-6">
-                <ul class="list-marked d-inline-block d-inline-md-block">
-                  <li>Consulting</li>
-                  <li>Customer Service</li>
-                  <li>Innovation</li>
-                  <li>Dedication</li>
-                  <li>Ethics</li>
-                </ul>
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft" data-wow-delay=".05s">
+              <div class="product-figure"><img src="images/product-3-161x162.png" alt="" width="161" height="162" />
               </div>
-              <div class="col-md-6">
-                <ol class="list-ordered d-inline-block d-inline-md-block">
-                  <li>Consulting</li>
-                  <li>Customer Service</li>
-                  <li>Innovation</li>
-                  <li>Dedication</li>
-                  <li>Ethics</li>
-                </ol>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star text-gray-13"></span></div>
+              <h6 class="product-title">Leather Jacket</h6>
+              <div class="product-price-wrap">
+                <div class="product-price">$150.00</div>
               </div>
-            </div>
+              <div class="product-button">
+                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
+                    Product</a></div>
+              </div>
+            </article>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Blockquote-->
-    <section class="section section-sm section-last bg-default section-style-2 text-md-left">
-      <div class="container">
-        <div class="row row-50">
-          <div class="col-lg-10 col-xl-7">
-            <h4>Blockquote</h4>
-            <!-- Quote Classic-->
-            <article class="quote-classic">
-              <div class="quote-classic-text">
-                <p class="q">Welcome to our wonderful world. We sincerely hope that each and every user entering our
-                  website will find exactly what you need.</p>
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft">
+              <div class="product-figure"><img src="images/product-4-161x162.png" alt="" width="161" height="162" />
               </div>
-              <p class="quote-classic-author">Stephen Adams</p>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
+              <h6 class="product-title">Stylish Trousers</h6>
+              <div class="product-price-wrap">
+                <div class="product-price product-price-old">$60.00</div>
+                <div class="product-price">$40.00</div>
+              </div>
+              <div class="product-button">
+                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
+                    Product</a></div>
+              </div><span class="product-badge product-badge-sale">Sale</span>
+            </article>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft" data-wow-delay=".15s">
+              <div class="product-figure"><img src="images/product-1-161x162.png" alt="" width="161" height="162" />
+              </div>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star text-gray-13"></span></div>
+              <h6 class="product-title">Casual Shirt</h6>
+              <div class="product-price-wrap">
+                <div class="product-price">$50.00</div>
+              </div>
+              <div class="product-button">
+                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
+                    Product</a></div>
+              </div>
+            </article>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft" data-wow-delay=".1s">
+              <div class="product-figure"><img src="images/product-2-161x162.png" alt="" width="161" height="162" />
+              </div>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
+              <h6 class="product-title">Formal Suit</h6>
+              <div class="product-price-wrap">
+                <div class="product-price">$120.00</div>
+              </div>
+              <div class="product-button">
+                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
+                    Product</a></div>
+              </div><span class="product-badge product-badge-new">New</span>
+            </article>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft" data-wow-delay=".05s">
+              <div class="product-figure"><img src="images/product-3-161x162.png" alt="" width="161" height="162" />
+              </div>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star text-gray-13"></span></div>
+              <h6 class="product-title">Leather Jacket</h6>
+              <div class="product-price-wrap">
+                <div class="product-price">$150.00</div>
+              </div>
+              <div class="product-button">
+                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
+                    Product</a></div>
+              </div>
+            </article>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft">
+              <div class="product-figure"><img src="images/product-4-161x162.png" alt="" width="161" height="162" />
+              </div>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
+              <h6 class="product-title">Stylish Trousers</h6>
+              <div class="product-price-wrap">
+                <div class="product-price product-price-old">$60.00</div>
+                <div class="product-price">$40.00</div>
+              </div>
+              <div class="product-button">
+                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
+                    Product</a></div>
+              </div><span class="product-badge product-badge-sale">Sale</span>
             </article>
           </div>
         </div>
       </div>
     </section>
+
     <!-- Page Footer-->
     <footer class="section footer-modern context-dark footer-modern-2">
       <div class="footer-modern-line">
