--- a/about-us.html
+++ b/about-us.html
@@ -126,7 +126,7 @@
               </div>
               <div class="rd-navbar-project">
                 <div class="rd-navbar-project-header">
-                  <h5 class="rd-navbar-project-title">Gallery</h5>
+                  <h5 class="rd-navbar-project-title">Top Picks</h5>
                   <div class="rd-navbar-project-hamburger rd-navbar-project-hamburger-close"
                     data-multitoggle=".rd-navbar-inner" data-multitoggle-blur=".rd-navbar-wrap"
                     data-multitoggle-isolate="data-multitoggle-isolate">
@@ -480,40 +480,36 @@
             <div class="tabs-custom" id="tabs-5">
               <div class="tab-content tab-content-1">
                 <div class="tab-pane fade" id="tabs-5-1">
-                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Zifra Creations's Inception</h5>
-                  <p>Zifra Creations started with a vision to redefine men's fashion. From a small boutique, we've
-                    grown into a brand known for quality and style.</p>
+                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Foundation in Textile Precision</h5>
+                  <p>Zifra Creations journey began by stepping into the textile cutting industry, mastering precision and quality to serve garment manufacturers.</p>
                 </div>
                 <div class="tab-pane fade" id="tabs-5-2">
-                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Expanding Our Horizons</h5>
-                  <p>In 2015, we launched our online store, making our collections accessible to a broader audience. Our
-                    commitment to excellence remains our guiding principle.</p>
+                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Expansion into Garment Manufacturing</h5>
+                  <p>In 2019, We expanded into garment production, leveraging our expertise to create high-quality clothing tailored to diverse needs.</p>
                 </div>
                 <div class="tab-pane fade" id="tabs-5-3">
-                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Innovating Men's Fashion</h5>
-                  <p>We continue to innovate by offering the latest trends alongside classic pieces. Our dedication to
-                    quality is unwavering as we expand our product lines.</p>
+                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Market-Driven T-Shirt Brand Launch</h5>
+                  <p>After extensive market analysis, we successfully launched our T-shirt company, catering to modern fashion trends and customer demands.</p>
                 </div>
                 <div class="tab-pane fade show active" id="tabs-5-4">
-                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Partnering with Top Designers</h5>
-                  <p>Our collaboration with top designers has helped us stay ahead of fashion trends while maintaining
-                    the timeless appeal that our customers love.</p>
+                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Digital Presence with Website Launch</h5>
+                  <p>We are now proud to launch our official website, showcasing our brand, designs, and commitment to excellence to a global audience.</p>
                 </div>
               </div>
               <div class="list-history-wrap">
                 <ul class="nav list-history">
                   <li class="list-history-item" role="presentation"><a href="#tabs-5-1" data-toggle="tab">
-                      <div class="list-history-circle"></div>2010
-                    </a></li>
-                  <li class="list-history-item" role="presentation"><a href="#tabs-5-2" data-toggle="tab">
                       <div class="list-history-circle"></div>2015
                     </a></li>
+                  <li class="list-history-item" role="presentation"><a href="#tabs-5-2" data-toggle="tab">
+                      <div class="list-history-circle"></div>2019
+                    </a></li>
                   <li class="list-history-item" role="presentation"><a href="#tabs-5-3" data-toggle="tab">
-                      <div class="list-history-circle"></div>2018
+                      <div class="list-history-circle"></div>2024
                     </a></li>
                   <li class="list-history-item" role="presentation"><a class="active" href="#tabs-5-4"
                       data-toggle="tab">
-                      <div class="list-history-circle"></div>2022
+                      <div class="list-history-circle"></div>2025
                     </a></li>
                 </ul>
               </div>
@@ -689,7 +685,7 @@
                 <div class="footer-modern-contacts wow slideInDown">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
-                    <div class="unit-body"><a class="mail" href="mailto:#">info@demolink.org</a></div>
+                    <div class="unit-body"><a class="mail" href="mailto:zifra.comfortwear@gmail.com">zifra.comfortwear@gmail.com</a></div>
                   </div>
                 </div>
                 <div class="wow slideInRight">
@@ -712,7 +708,7 @@
             <div class="col-md-auto">
               <!-- Rights-->
               <p class="rights">
-                <span>Copyright © 2024 All Right Reserved Design & Develop by Cyber Phoenix IT Services</span>
+                <span>Copyright © 2025 All Rights Reserved , Design & Developed by Cyber Phoenix IT Services</span>
               </p>
             </div>
           </div>
