--- a/quote.html
+++ b/quote.html
@@ -123,7 +123,7 @@
               </div>
               <div class="rd-navbar-project">
                 <div class="rd-navbar-project-header">
-                  <h5 class="rd-navbar-project-title">Gallery</h5>
+                  <h5 class="rd-navbar-project-title">Top Picks</h5>
                   <div class="rd-navbar-project-hamburger rd-navbar-project-hamburger-close"
                     data-multitoggle=".rd-navbar-inner" data-multitoggle-blur=".rd-navbar-wrap"
                     data-multitoggle-isolate="data-multitoggle-isolate">
@@ -404,7 +404,7 @@
                 <div class="footer-modern-contacts wow slideInDown">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
-                    <div class="unit-body"><a class="mail" href="mailto:#">info@demolink.org</a></div>
+                    <div class="unit-body"><a class="mail" href="mailto:zifra.comfortwear@gmail.com">zifra.comfortwear@gmail.com</a></div>
                   </div>
                 </div>
                 <div class="wow slideInRight">
@@ -427,7 +427,7 @@
             <div class="col-md-auto">
               <!-- Rights-->
               <p class="rights">
-                <span>Copyright © 2024 All Right Reserved Design & Develop by Cyber Phoenix IT Services</span>
+                <span>Copyright © 2025 All Rights Reserved , Design & Developed by Cyber Phoenix IT Services</span>
               </p>
             </div>
           </div>
